select comment query update done with user entity